--- a/adm/style/acp_connection_logs_body.html
+++ b/adm/style/acp_connection_logs_body.html
@@ -35,9 +35,7 @@
 		<tr>
 			<td><input type="text" name="usearch" value="{USEARCH}" /></td>
 			<td style="text-align: center;"><input type="text" name="isearch" value="{ISEARCH}" /></td>
-			<td style="text-align: center;">&nbsp;</td>
-			<td><select style="font-size: 1em;" name="asearch">{S_ASEARCH}</select></td>
-			<td style="text-align: center;"><input type="submit" class="button2" value="{L_ACP_LOGS_SORT}" /></td>
+			<td colspan="3"><select style="font-size: 1em;" name="asearch">{S_ASEARCH}</select>&nbsp;<input type="submit" class="button2" value="{L_ACP_LOGS_SORT}" /></td>
 		</tr>
 	</tbody>
 	</table>
