--- a/adm/style/acp_connection_logs_body.html
+++ b/adm/style/acp_connection_logs_body.html
@@ -1,5 +1,16 @@
 <!-- INCLUDE overall_header.html -->
 
+<style>
+.log-success {
+	color: #009900;
+	font-size: 100%;
+}
+.log-fail {
+	color: #FF0000;
+	font-size: 100%;
+}
+</style>
+
 <a name="maincontent"></a>
 
 <h1>{L_ACP_CONNECTION_LOGS}</h1>
