--- a/adm/style/acp_connection_logs_body.html
+++ b/adm/style/acp_connection_logs_body.html
@@ -16,7 +16,7 @@
 	<thead>
 	<tr>
 		<th style="width: 15%;">{L_USERNAME}</th>
-		<th style="width: 15%;">{L_IP}</th>
+		<th style="width: 15%;"><a href="{U_HOSTNAME}">{L_IP}</a></th>
 		<th style="width: 20%;">{L_TIME}</th>
 		<th>{L_ACTION}</th>
 		<th style="width: 60px;">{L_MARK}</th>
